# pyDataPipeline

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .zenodo.json  CNAME  MANIFEST.in  README.md  codemeta.json  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  software_checklist.html
.doctrees/: environment.pickle  index.doctree  installation.doctree  software_checklist.doctree
.doctrees/api/: index.doctree
.doctrees/examples/: SEIRS.doctree
.doctrees/simpleModel/: index.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dependabot.yml  gh-pages.yaml  pyDataPipeline.yaml
_docs/source/: conf.py
_docs/source/api/: index.rst
_docs/source/examples/: SEIRS.rst
_sources/: index.rst.txt  software_checklist.rst.txt
_sources/examples/: SEIRS.rst.txt
_sources/simpleModel/: index.rst.txt
_static/css/: custom.css
api/: index.html
data_pipeline_api/: __init__.py  exceptions.py  fdp_utils.py  link.py  pipeline.py  raise_issue.py
data_pipeline_api/ext/: SEIRSModelRun.py  SEIRSconfig.yaml  SEIRSconfigWindows.yaml
doc/: conf.py  index.rst  software_checklist.rst
doc/_build/doctrees/: environment.pickle  index.doctree  installation.doctree
doc/_build/doctrees/api/: index.doctree
doc/_build/doctrees/examples/: SEIRS.doctree
doc/_build/doctrees/simpleModel/: index.doctree
doc/_build/html/: genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt  installation.rst.txt
doc/_build/html/_sources/examples/: SEIRS.rst.txt
doc/_build/html/_sources/simpleModel/: index.rst.txt
doc/_build/html/api/: index.html
doc/_build/html/examples/: SEIRS.html
doc/_build/html/simpleModel/: index.html
doc/_static/css/: custom.css
doc/api/: index.rst
doc/examples/: SEIRS.rst  SEIRS_output.csv
doc/simpleModel/: index.rst
docs/: .buildinfo  genindex.html  index.html  installation.rst  py-modindex.html  searchindex.js
docs/api/: index.rst
docs/examples/: SEIRS_output.csv
docs/source/: installation.rst
examples/: SEIRS.html
fairdatapipeline/: __init__.py  fdp_utils.py  link.py  pipeline.py  raise_issue.py
fairdatapipeline/api/: __init__.py
fairdatapipeline/api/common/: fdp_utils.py  finalise_pipeline.py  initialise_pipeline.py  link_read.py  link_write.py
fairdatapipeline/simpleModel/common/: SEIRS_Model.py  SEIRS_Plot.py
fairdatapipeline/simpleModel/ext/: SEIRSModelRun.py  SEIRSconfig.yaml  SEIRSconfigWindows.yaml
simpleModel/: index.html
simpleModel/common/: SEIRS_Model.py  SEIRS_Plot.py
simpleModel/ext/: SEIRSModelRun.py  SEIRSconfig.yaml  SEIRSconfigWindows.yaml
src/: pyfdp.py
src/fair_data_pipeline/: fdp_utils.py  initialise_pipeline.py  pipeline.py  pyfdp.py
src/org/fairdatapipeline/api/: __init__.py
src/org/fairdatapipeline/api/common/: fdp_utils.py  finalise_pipeline.py  initialise_pipeline.py  link_read.py  link_write.py  pyfdp.py  raise_issue.py
src/org/fairdatapipeline/simpleModel/: __init__.py
src/org/fairdatapipeline/simpleModel/common/: SEIRS_Model.py  SEIRS_Plot.py
src/org/fairdatapipeline/simpleModel/ext/: SEIRSModelRun.py  SEIRSconfig.yaml  SEIRSconfigWindows.yaml  static_params_SEIRS.csv
src/tests/: test_fdp_utils.py  test_raise_issue.py
src/tests/ext/: read_csv.yaml  test_script.sh  test_token  write_csv.yaml
tests/: conftest.py  test_fdp_utils.py  test_netcdf.py  test_raise_issue.py
tests/ext/: coderuns.txt  find_csv.yaml  read_csv.yaml  test_script.sh  test_token  write_csv.yaml  write_netcdf.yaml
