[tool.poetry]
name = "data_pipeline_api"
version = "0.9.0"
description = "Python api to interact with the Fair Data Pipeline"
authors = [
    "Ryan J Field <ryan.field@glasgow.ac.uk>",
    "Dennis Reddyhoff <d.reddyhoff@sheffield.ac.uk>",
    "Robert D Turner <r.d.turner@shef.ac.uk>",
    "Bruno Viola <bruno.viola@ukaea.uk>",
    "Kristian Zarebski <kristian.zarebski@ukaea.uk>"
    ]


homepage = "https://www.fairdatapipeline.org/"

repository = "https://github.com/FAIRDataPipeline/pyDataPipeline"

license = "GNU General Public License v3.0"

packages = [
    {include = "data_pipeline_api"}
]

readme = "README.md"

keywords = [
    "FAIR Data Pipeline",
    "FAIR",
    "Data Management",
    "Provenance"
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.23.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
black = "*"
mypy = "*"
flake8 = "*"
poetry = "^1.1.12"
pytest-mock = "*"
pytest-dependency = "*"
pytest-cov = "*"
pre-commit = "^4.0.1"
isort = "^5.10.1"
Sphinx = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.urls]
"Issue Tracker" = "https://github.com/FAIRDataPipeline/pyDataPipeline/issues"



[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79



[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = '-s -v --cov=data_pipeline_api  --cov-report=html --cov-report=term'
markers = [
    "pipeline: tests for 'pipeline' module ",
    "issue: tests for raising issues ",
    "utilities: tests for 'utilities' functions ",
    "apiversion: tests for api versioning ",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
